--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ permalink: /:year/:month/:day/:title/
 # other links
 #twitter_username:
 #facebook_username:
-github_username:  fatcat22
+github_username: fatcat22
 email: yangzhe.me@foxmail.com
 #weibo_username:
 #zhihu_username:
@@ -52,3 +52,7 @@ excerpt_separator: "\n\n\n\n"
 # paginate
 plugins: [jekyll-paginate]
 paginate: 6
+
+# Share
+social-share: true # 开启或者关闭分享功能
+social_share_items: ["wechat", "weibo", "douban", "twitter"]
